# muviz

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
muviz/: __init__.py  cli.py
muviz/audio/: analyzer.py  processor.py
muviz/config/: settings.py
muviz/renderer/: __init__.py  frame_generator.py  video_writer.py
muviz/visualizer/: __init__.py  abstract.py  base.py  geometric.py  particle.py
